# SPHINX-V2

./: AUTHORS.md  AUTHORS.md.txt  License.txt  README.md
src/: Key.cpp  (+78 more)
src/Lib/MPC/: .travis.yml  CMakeLists.txt  README.md
src/Lib/MPC/.github/ISSUE_TEMPLATE/: bug-report.md
src/Lib/MPC/assets/circuits/arithmetic/StatisticCircuit/: ArithmeticStatistics1PairsAnd200SamplesFor4Parties.txt
src/Lib/MPC/build_scripts/: INSTALL.md  copyright.sh  copyright.txt  merge_git.sh  rebuild.sh  rebuildLibs.sh
src/Lib/MPC/docs/: make.bat
src/Lib/MPC/docs/source/: communication.rst  conf.py  install.rst  mid_layer.rst  primitives.rst  quickstart.rst
src/Lib/MPC/docs/source/interactive_layer/: ot.rst  zk.rst
src/Lib/MPC/docs/source/mid_layer/: asymmetric_enc.rst  mac.rst
src/Lib/MPC/docs/source/primitives/: cryptographic_hash.rst  dlog.rst  kdf.rst  pseudorandom_function.rst  pseudorandom_generator.rst  pseudorandom_permutation.rst
src/Lib/MPC/examples/: CMakeLists.txt  examples_main.cpp
src/Lib/MPC/examples/OT/: OTConfig.txt
src/Lib/MPC/examples/OTExtensionBristol/: OTExtensionBristolExample.cpp
src/Lib/MPC/examples/SigmaProtocols/: SigmaProtocolExample.cpp
src/Lib/MPC/examples/Simple/: simple_dlog.cpp  simple_sha1.cpp
src/Lib/MPC/examples/assets/circuits/AESMULT/: AesExpandedPartyTwoInputs.txt  NigelAesExpanded.txt
src/Lib/MPC/examples/assets/ssl_keys/: server.csr  server.key
src/Lib/MPC/include/circuits/: BooleanCircuits.hpp  Compat.h  FourToTwoGarbledBoleanCircuitNoAssumptions.h  FreeXorGarbledBooleanCircuit.h  GarbledBooleanCircuitNoFixedKey.h  GarbledBooleanCircuitNoIntrinsics.h  GarbledGate.h  HalfGatesGarbledBoleanCircuitNoFixedKey.h  HalfGatesGarbledBooleanCircuit.h  RowReductionGarbledBooleanCircuit.h  StandardGarbledBooleanCircuit.h
src/Lib/MPC/include/comm/: Comm.hpp  CommBF.hpp  MPCCommunication.hpp  MPCCommunicationBF.hpp  Message.hpp  Network.h
src/Lib/MPC/include/cryptoInfra/: Key.hpp  PlainText.hpp
src/Lib/MPC/include/infra/: Common.hpp  MathAlgorithms.hpp  aes_arm.h
src/Lib/MPC/include/interactive_mid_protocols/: CommitmentScheme.hpp  CommitmentSchemeEquivocal.hpp  CommitmentSchemePedersen.hpp  CommitmentSchemePedersenHash.hpp  CommitmentSchemeSimpleHash.hpp  OTBatch.hpp  OTExtensionBristol.hpp  OTExtensionEncrypto.hpp  OTFullSimulation.hpp  OTOneSidedSimulation.hpp  OTSemiHonest.hpp  SigmaProtocol.hpp  SigmaProtocolDH.hpp  SigmaProtocolDHExtended.hpp  SigmaProtocolDamgardJurikEncryptedZero.hpp  SigmaProtocolDamgardJurikProduct.hpp  SigmaProtocolDlog.hpp  SigmaProtocolElGamalEncryptedValue.hpp  SigmaProtocolPedersenCommittedValue.hpp  ZeroKnowledge.hpp
src/Lib/MPC/include/mid_layer/: AsymmetricEnc.hpp  CramerShoupEnc.hpp  DamgardJurikEnc.hpp  OpenSSLSymmetricEnc.hpp
src/Lib/MPC/include/primitives/: Dlog.hpp  DlogOpenSSL.hpp  HashBlake2.hpp  HashOpenSSL.hpp  Kdf.hpp  Matrix.hpp  Mersenne.hpp  PrfOpenSSL.hpp  RandomOracle.hpp  TrapdoorPermutation.hpp  TrapdoorPermutationOpenSSL.hpp
src/Lib/MPC/lib/BLAKE2/Blake2/: Blake2.sln
src/Lib/MPC/lib/BLAKE2/Blake2/Blake2/: Blake2.vcxproj  Blake2.vcxproj.filters
src/Lib/MPC/lib/COTShortKeys/: COTSK.h  COTSK_Receiver_impl.h  COTSK_Test.cpp  MPCCommunicationEX.hpp
src/Lib/MPC/lib/NTL/include/NTL/: FFT.h  ZZ.h  config.h  lip.h  tools.h  version.h
src/Lib/MPC/lib/NTL/src/: CheckThreads.cpp  GF2E.cpp  Wizard  WordVector.cpp  ZZ.cpp  ZZ_pX.cpp  ZZ_pX1.cpp  ctools.cpp  lip.cpp  lzz_pEX.cpp  lzz_pXTest.cpp  mfile  quad_float.cpp
src/Lib/MPC/lib/libOTe/: CMakeLists.txt  README.md
src/Lib/MPC/lib/libOTe/cryptoTools/: copySourceToLinux.ps1  readme.md
src/Lib/MPC/lib/libOTe/cryptoTools/cryptoTools/: cryptoTools.vcxproj
src/Lib/MPC/lib/libOTe/cryptoTools/frontend_cryptoTools/: main.cpp
src/Lib/MPC/lib/libOTe/cryptoTools/tests_cryptoTools/: BtChannel_Tests.cpp  BtChannel_Tests.h  UnitTests.cpp  (+1 more)
src/Lib/MPC/lib/libOTe/frontend/: frontend.vcxproj  util.cpp  util.h
src/Lib/MPC/lib/libOTe/libOTe/: libOTe.vcxproj.vcxproj
src/Lib/MPC/lib/libOTe/libOTe_Tests/: BaseOT_Tests.cpp  OT_Tests.cpp  OT_Tests.h  libOTe_Tests.vcxproj.vcxproj
src/Lib/MPC/lib/libOTe/libOTe_TestsVS/: OT_TestsVS.cpp  libOTe_TestsVS.vcxproj
src/Lib/MPC/src/circuits/: ArithmeticCircuit.cpp  BooleanCircuits.cpp  FourToTwoGarbledBoleanCircuitNoAssumptions.cpp  FreeXorGarbledBooleanCircuit.cpp  GarbledBooleanCircuitNoFixedKey.cpp  GarbledBooleanCircuitNoIntrinsics.cpp  GarbledCircuitFactory.cpp  HalfGatesGarbledBoleanCircuitNoFixedKey.cpp
src/Lib/MPC/src/circuits_c/: intrin_sequential_ks1_enc1.c  intrin_sequential_ks2_enc2.c
src/Lib/MPC/src/comm/: Comm.cpp  CommBF.cpp  MPCCommunication.cpp
src/Lib/MPC/src/cryptoInfra/: Protocol.cpp
src/Lib/MPC/src/infra/: Common.cpp  ConfigFile.cpp  MathAlgorithms.cpp  aes_arm.cpp
src/Lib/MPC/src/interactive_mid_protocols/: CommitmentSchemeElGamal.cpp  CommitmentSchemeElGamalHash.cpp  CommitmentSchemePedersen.cpp  CommitmentSchemePedersenHash.cpp  CommitmentSchemeSimpleHash.cpp  OT.cpp  OTExtensionEncrypto.cpp  OTFullSimulationROM.cpp  OTOneSidedSimulation.cpp  OTSemiHonest.cpp  OTUC.cpp  SigmaProtocol.cpp  SigmaProtocolCramerShoupEncryptedValue.cpp  SigmaProtocolDamgardJurikEncryptedValue.cpp  SigmaProtocolDamgardJurikProduct.cpp  SigmaProtocolDlog.cpp  SigmaProtocolOrMultiple.cpp  SigmaProtocolOrTwo.cpp  SigmaProtocolPedersenCmtKnowledge.cpp
src/Lib/MPC/src/mid_layer/: CramerShoupEnc.cpp
src/Lib/MPC/src/primitives/: Dlog.cpp  DlogOpenSSL.cpp  Mersenne.cpp  PrfOpenSSL.cpp  Prg.cpp  TrapdoorPermutation.cpp
src/Lib/MPC/tests/: CMakeLists.txt  NigelAesOutput.txt  interactiveMidProtocolsTests.cpp  testCircuitOutput.txt  tests.cpp
src/Lib/MPC/tools/circuits/: README.md
src/Lib/MPC/tools/circuits/javaSynteticCircuitGenerator/: GenerateArithmeticCircuitForDepthAndGates.java  GenerateArithmeticCircuitForStatistics.java  README.md
src/Lib/MPC/tools/circuits/scapiBristolConverter/: CircuitConverter.hpp  ScapiBristolConverter.cpp  scapiBristolConverter
src/Lib/MPC/tools/circuits/scapiNecConverter/: Circuit.cpp  CircuitConverter.cpp  CircuitConverter.h  README.md  ScapiNecConverter.cpp
(+3410 files in other folders)
